--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="stats">
     <p id="charCount">글자 수 (공백 포함): 0자</p>
     <p id="charCountWithoutSpaces">글자 수 (공백 제외): 0자</p> <!-- 추가된 부분 -->
-    <p id="specialSpaceCount">특수 공백 개수: 0개</p>
+    <p id="specialAiCount">AI 생성 글자 수 (특수 공백 포함): 0개</p>
 </div>
 
 <div class="buttons">
